--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <meta property="og:title" content="RU DNS Requester">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="...">
+  <meta property="og:url" content="https://poc-ru-dns-requester.herokuapp.com/">
+  <!-- https://pastebin.com/rW8sb0Ph -->
   <meta property="og:description" content="Slava Ukraini | Слава Україні | Слава Украине">
   <style media="screen">
     @media (prefers-color-scheme: dark) {
@@ -70,6 +71,14 @@
 
     <pre id="domainList"></pre>
     <script src="flood.js"></script>
+    
+    <p>
+      <br/><br/>
+      =========<br/>
+      <a href="https://poc-ru-dns-requester.herokuapp.com" rel="nofollow noreferrer">https://poc-ru-dns-requester.herokuapp.com</a><br/>
+      <a href="https://pastebin.com/rW8sb0Ph" rel="nofollow noreferrer">https://pastebin.com/rW8sb0Ph</a><br/>
+      <a href="https://github.com/fpp4ua/POC-DNS-Requester" rel="nofollow noreferrer">https://github.com/fpp4ua/POC-DNS-Requester</a>
+    </p>
   </div>
 </body>
 </html>
