--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         border-color: #555;
       }
     }
+    
+    @media (max-width: 680px) {
+      .container {
+        width: 100% !important;
+        margin: auto !important;
+      }
+    }
 
     * {
       font-family: Arial, Helvetica, sans-serif;
